fixnuty ze v chormu je tam osklivej overflow scrollbar

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -68,7 +68,6 @@ a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow-x: scroll;
     align-items: center;
 }
 
